Remove tie case. Need to rewrite for ties.

--- a/style.css
+++ b/style.css
@@ -3,9 +3,14 @@ button.space {
     border: none;
     height: 200px;
     width: 200px;
+    font-size: 9em;
 }
 
 .board {
     margin: auto;
     width: 600px;
+}
+
+.header {
+    
 }
